--- a/pride-inspector/branches/development/src/main/resources/help/html/usage/browse/peptide.html
+++ b/pride-inspector/branches/development/src/main/resources/help/html/usage/browse/peptide.html
@@ -75,7 +75,7 @@
 
     <p>
 
-    <div class="tip">
+    <div class="note">
         <p>
             An mass spec experiment often don't contain protein names and protein sequences, these are the
             key
@@ -84,8 +84,7 @@
             <span class="annotation">Obtain Protein Details</span>
             to retrieve the complete protein names, protein accession status, protein sequence and protein
             sequence
-            coverage. Once clicked, two extra columns will be added to the protein table: protein name and fit in
-            sequence. [Note that, this requires an active Internet
+            coverage. Once clicked, two extra columns will be added to the protein table: protein name and fit. [Note that, this requires an active Internet
             connection]
         </p>
 
@@ -95,7 +94,7 @@
         </p>
     </div>
 
-    <div class="tip">
+    <div class="note">
         <p>
             Click on <span class="annotation">Decoy Filter</span> to set a filter to show or hide decoy protein
             identifications
@@ -123,7 +122,7 @@
             </td>
         </tr>
         <tr class="piRowEven">
-            <td width="20%">Fit In Sequence</td>
+            <td width="20%">Fit</td>
             <td>whether the peptide sequence fits the protein sequence, it could be unknown when the protein
                 sequence is
                 no available, or fit if the peptide sequence can be found at the given start and stop position
@@ -145,7 +144,7 @@
             </td>
         </tr>
         <tr class="piRowOdd">
-            <td width="20%">Precursor Charge</td>
+            <td width="20%">Charge</td>
             <td>Precursor ion charge</td>
         </tr>
         <tr class="piRowEven">
@@ -264,7 +263,7 @@
             <td>The version of the PTM database.</td>
         </tr>
     </table>
-    <div class="tip">
+    <div class="note">
         PTM table is hidden when the selected peptide has not post translational modifications.
     </div>
     </p>
