--- a/pride-inspector/branches/development/src/main/resources/help/html/usage/browse/protein.html
+++ b/pride-inspector/branches/development/src/main/resources/help/html/usage/browse/protein.html
@@ -78,7 +78,7 @@
         Dimensional Gel), the <span class="keyword">Search Engine</span> used
         and the <span class="keyword">Search Database</span>.
 
-    <div class="tip">
+    <div class="note">
         <p>
             An mass spec experiment often don't contain protein names and protein sequences, these are the
             key
@@ -99,7 +99,7 @@
         </p>
     </div>
 
-    <div class="tip">
+    <div class="note">
         <p>
             Click on <span class="annotation">Decoy Filter</span> to set a filter to show or hide decoy protein
             identifications
@@ -186,12 +186,12 @@
         </tr>
     </table>
 
-    <div class="tip">
+    <div class="note">
         You can right click within the protein table to open a popup menu where you can search the table or choose to
         copy
         the content of an individual cell or a number of rows.
     </div>
-    <div class="tip">
+    <div class="note">
         You can click on the hyperlinked protein accession in the Mapped Protein Accession column to open
         the protein's entry in the respective protein database.
     </div>
@@ -228,7 +228,7 @@
             </td>
         </tr>
         <tr class="piRowEven">
-            <td width="20%">Fit In Sequence</td>
+            <td width="20%">Fit</td>
             <td>whether the peptide sequence fits the protein sequence, it could be unknown when the protein sequence is
                 no available, or fit if the peptide sequence can be found at the given start and stop position of the
                 protein sequence, or fuzzy fit if the peptide position no longer fit, but the peptide sequence can still
@@ -247,7 +247,7 @@
             </td>
         </tr>
         <tr class="piRowOdd">
-            <td width="20%">Precursor Charge</td>
+            <td width="20%">Charge</td>
             <td>Precursor ion charge</td>
         </tr>
         <tr class="piRowEven">
@@ -316,7 +316,7 @@
         </tr>
     </table>
 
-    <div class="tip">
+    <div class="note">
         You can click on the magnifying glass icon in the #PTM column to view additional details on the PTMs on a
         specific peptide.
     </div>
