--- a/pride-inspector/branches/development/src/main/resources/help/html/usage/browse/peptide.html
+++ b/pride-inspector/branches/development/src/main/resources/help/html/usage/browse/peptide.html
@@ -84,7 +84,8 @@
             <span class="annotation">Obtain Protein Details</span>
             to retrieve the complete protein names, protein accession status, protein sequence and protein
             sequence
-            coverage. Once clicked, two extra columns will be added to the protein table: protein name and fit. [Note that, this requires an active Internet
+            coverage. Once clicked, two extra columns will be added to the protein table: protein name and fit. [Note
+            that, this requires an active Internet
             connection]
         </p>
 
@@ -104,7 +105,8 @@
             More information on <span class="annotation"><a href="../protein/decoy_filter.html">Decoy Filter</a></span>
         </p>
     </div>
-    The table below gives a short description for every column in the peptide table:
+    You can click on <img src="../../images/show_column.png" alt="Show/Hide Icon"/> to show or hide columns, and the
+    table below gives a short description for every column in the peptide table:
     <table class="piTable" width="100%" cellpadding="4" cellspacing="4">
         <tr class="piRowHead">
             <td width="20%">Column</td>
@@ -220,7 +222,8 @@
     <h3>PTM</h3>
 
     <p>
-        The table below gives a short description for every column in the PTM table:
+        You can click on <img src="../../images/show_column.png" alt="Show/Hide Icon"/> to show or hide columns, and the
+        table below gives a short description for every column in the PTM table:
     <table class="piTable" width="100%" cellpadding="4" cellspacing="4">
         <tr class="piRowHead">
             <td width="20%">Column</td>
