--- a/pride-inspector/branches/development/src/main/resources/help/html/usage/browse/protein.html
+++ b/pride-inspector/branches/development/src/main/resources/help/html/usage/browse/protein.html
@@ -111,7 +111,9 @@
     </div>
 
     <p>
-        The table below gives a short description for every column in the protein table:
+        You can click on <img src="../../images/show_column.png" alt="Show/Hide Icon"/> to show or hide columns, and the
+        table
+        below gives a short description for every column in the protein table:
     <table class="piTable" width="100%" cellpadding="4" cellspacing="4">
         <tr class="piRowHead">
             <td width="20%">Column</td>
@@ -210,7 +212,8 @@
     </p>
 
     <p>
-        The table below gives a short description for every column in the peptide table:
+        You can click on <img src="../../images/show_column.png" alt="Show/Hide Icon"/> to show or hide columns, and the
+        table below gives a short description for every column in the peptide table:
     <table class="piTable" width="100%" cellpadding="4" cellspacing="4">
         <tr class="piRowHead">
             <td width="20%">Column</td>
