Enabled connection to production database

--- a/pride-inspector/branches/development/src/main/resources/help/html/usage/protein/obtain_protein_details.html
+++ b/pride-inspector/branches/development/src/main/resources/help/html/usage/protein/obtain_protein_details.html
@@ -102,7 +102,7 @@
 
                 <p>
                     The status field indicates the status of the protein accession according to the original database.
-                    It could be one of the following status:
+                    It could be one of the following statuses:
                 <ul>
                     <li><b>Active</b>: the protein accession still exists in the original database, and the details
                         remain unchanged.
