--- a/pride-inspector/branches/development/src/main/resources/help/html/usage/browse/peptide.html
+++ b/pride-inspector/branches/development/src/main/resources/help/html/usage/browse/peptide.html
@@ -195,7 +195,7 @@
         </tr>
         <tr class="piRowOdd">
             <td width="20%">pI</td>
-            <td>Theoretical isoelectric point</td>
+            <td>Theoretical isoelectric point calculated using peptide sequence. See details from <a href="../isoelectric_point.html">here</a>.</td>
         </tr>
         <tr class="piRowEven">
             <td width="20%">Spectrum</td>
