--- a/pride-inspector/branches/development/src/main/resources/help/html/usage/browse/protein.html
+++ b/pride-inspector/branches/development/src/main/resources/help/html/usage/browse/protein.html
@@ -152,7 +152,7 @@
         </tr>
         <tr class="piRowEven">
             <td width="20%">pI</td>
-            <td>Theoretical isoelectric point calculated using protein sequence.
+            <td>Theoretical isoelectric point calculated using protein sequence. See details from <a href="../isoelectric_point.html">here</a>.
             </td>
         </tr>
         <tr class="piRowOdd">
@@ -299,7 +299,7 @@
         </tr>
         <tr class="piRowOdd">
             <td width="20%">pI</td>
-            <td>Theoretical isoelectric point</td>
+            <td>Theoretical isoelectric point calculated using peptide sequence. See details from <a href="../isoelectric_point.html">here</a>.</td>
         </tr>
         <tr class="piRowEven">
             <td width="20%">Spectrum</td>
