GUI Integration with Current Development Branch

--- a/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/browse/peptide.html
+++ b/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/browse/peptide.html
@@ -40,15 +40,19 @@
         </li>
         <li><a href="#ptm">PTM</a> - a table showing the post translational modifications in the selected peptide
         </li>
-        <li><a href="#spectrum">Spectrum Browser</a> - visualizes the spectrum used to identified the peptide.</li>
+        <li><a href="#spectrum">Spectrum Browser</a> - visualizes the spectrum used to identified the peptide.
+        </li>
+        <li><a href="#sequence">Protein Sequence Viewer</a> - shows the peptides and ptm coverage in protein sequence
+        </li>
     </ul>
     </p>
 
     <div class="note">
         <p>
-            You can select the peptide you are interested in by clicking on the respective row in the peptide table. This
+            You can select the peptide you are interested in by clicking on the respective row in the peptide table.
+            This
             will trigger an automatic update of both the PTM table and the spectrum browser. The of PTMs
-            in the selected peptide will be updated in the PTM table. Additionally, the spectrum identifying 
+            in the selected peptide will be updated in the PTM table. Additionally, the spectrum identifying
             the selected peptide will be displayed.
         </p>
     </div>
@@ -63,160 +67,238 @@
 
 <!-- content -->
 <div id="content">
-    <div class="section">
-        <div class="piProcedureSteps">
-            <a name="peptide"></a>
+<div class="section">
+<div class="piProcedureSteps">
+    <a name="peptide"></a>
 
-            <h3>Peptide</h3>
+    <h3>Peptide</h3>
 
-            <p>
-                The table below gives a short description for every column in the peptide table:
-            <table class="piTable" width="100%" cellpadding="4" cellspacing="4">
-                <tr class="piRowHead">
-                    <td width="20%">Column</td>
-                    <td>Description</td>
-                </tr>
-                <tr class="piRowEven">
-                    <td width="20%">Row Number</td>
-                    <td>Displays the row number</td>
-                </tr>
-                <tr class="piRowOdd">
-                    <td width="20%">Peptide Sequence</td>
-                    <td>The complete peptide sequence with modified amino acids highlighted in red. When 
-                    	putting the mouse cursour over the peptide sequence, a tooltip with PTM details is displayed.
-                    </td>
-                </tr>
-                <tr class="piRowEven">
-                    <td width="20%">Submitted Protein Accession</td>
-                    <td>The peptide's protein accession from the original data file/PRIDE experiment.</td>
-                </tr>
-                <tr class="piRowOdd">
-                    <td width="20%">Mapped Protein Accession</td>
-                    <td>As submitted protein accessions can sometimes
-                        include none-standard protein accessions PRIDE Inspector will try to format it to a more
-                        common format.
-                    </td>
-                </tr>
-                <tr class="piRowEven">
-                    <td width="20%">Precursor Charge</td>
-                    <td>Precursor ion charge</td>
-                </tr>
-                <tr class="piRowOdd">
-                    <td width="20%">Delta m/z</td>
-                    <td>
-                        The difference between the observed m/z and the theoretical m/z.
-                    </td>
-                </tr>
-                <tr class="piRowEven">
-                    <td width="20%">Precursor m/z</td>
-                    <td>Precursor ion m/z value.</td>
-                </tr>
-                <tr class="piRowOdd">
-                    <td width="20%">#PTMs</td>
-                    <td>Number of post translational modifications on this peptide.</td>
-                </tr>
-                <tr class="piRowEven">
-                    <td width="20%">PTM List</td>
-                    <td>A distinct list of PTM accessions together with their count</td>
-                </tr>
-                <tr class="piRowOdd">
-                    <td width="20%">#Ions</td>
-                    <td>Number of fragment ions reported for this peptide identification.</td>
-                </tr>
-                <tr class="piRowEven">
-                    <td width="20%">Peptide Score</td>
-                    <td>
-                        The peptide's score given by the search engine. The number of columns depends on the search engine used.
-                        For instance, Mascot score will be displayed if Mascot was used. Both X correlation and
-                        Delta Cn will be displayed for SEQUEST.
-                    </td>
-                </tr>
-                <tr class="piRowOdd">
-                    <td width="20%">Length</td>
-                    <td>Peptide length</td>
-                </tr>
-                <tr class="piRowEven">
-                    <td width="20%">Start</td>
-                    <td>The start position of the peptide within protein sequence.</td>
-                </tr>
-                <tr class="piRowOdd">
-                    <td width="20%">Stop</td>
-                    <td>The end position of the peptide within protein sequence.</td>
-                </tr>
-                <tr class="piRowEven">
-                    <td width="20%">Spectrum</td>
-                    <td>Spectrum ID</td>
-                </tr>
-            </table>
-        </div>
+    <p>
 
-        <div class="piProcedureSteps">
-            <a name="ptm"></a>
+    <div class="note">
+        <p>
+            An mass spec experiment often don't contain protein names and protein sequences, these are the
+            key
+            information to interpret the protein identification results. In the PRIDE Inspector, you can click
+            on
+            <span class="annotation">Obtain Protein Details</span>
+            to retrieve the complete protein names, protein accession status, protein sequence and protein
+            sequence
+            coverage. Once clicked, two extra columns will be added to the protein table: protein name and fit. [Note
+            that, this requires an active Internet
+            connection]
+        </p>
 
-            <h3>PTM</h3>
-
-            <p>
-                The table below gives a short description for every column in the PTM table:
-            <table class="piTable" width="100%" cellpadding="4" cellspacing="4">
-                <tr class="piRowHead">
-                    <td width="20%">Column</td>
-                    <td>Description</td>
-                </tr>
-                <tr class="piRowEven">
-                    <td width="20%">Row Number</td>
-                    <td>Displays the row number</td>
-                </tr>
-                <tr class="piRowOdd">
-                    <td width="20%">Accession</td>
-                    <td>The original accession from the PTM database.</td>
-                </tr>
-                <tr class="piRowEven">
-                    <td width="20%">Name</td>
-                    <td>PTM name</td>
-                </tr>
-                <tr class="piRowOdd">
-                    <td width="20%">Location</td>
-                    <td>The location within the peptide where the PTM occurred</td>
-                </tr>
-                <tr class="piRowEven">
-                    <td width="20%">Modified Residue</td>
-                    <td>The modified amino acid.</td>
-                </tr>
-                <tr class="piRowOdd">
-                    <td width="20%">Monoisotopic Mass Delta</td>
-                    <td>Monoisotopic Mass Delta</td>
-                </tr>
-                <tr class="piRowEven">
-                    <td width="20%">Average Mass Delta</td>
-                    <td>Average Mass Delta</td>
-                </tr>
-                <tr class="piRowOdd">
-                    <td width="20%">PTM Database</td>
-                    <td>The PTM database where the modification has been defined.</td>
-                </tr>
-                <tr class="piRowEven">
-                    <td width="20%">PTM Database Version</td>
-                    <td>The version of the PTM database.</td>
-                </tr>
-            </table>
-            <div class="tip">
-                PTM table is hidden when the selected peptide has not post translational modifications.
-            </div>
-            </p>
-        </div>
-
-        <div class="piProcedureSteps">
-            <a name="spectrum"></a>
-
-            <h3>Spectrum Browser</h3>
-
-            <p>
-                Displays the spectrum identifying the selected peptide.
-                <br>
-                For more details, please refer to: <a href="../mzgraph/spectra.html">Spectrum Browser</a>.
-            </p>
-        </div>
+        <p>
+            More information on <span class="annotation"><a href="../protein/obtain_protein_details.html">Obtain Protein
+            Details</a></span>
+        </p>
     </div>
+
+    <div class="note">
+        <p>
+            Click on <span class="annotation">Decoy Filter</span> to set a filter to show or hide decoy protein
+            identifications
+        </p>
+
+        <p>
+            More information on <span class="annotation"><a href="../protein/decoy_filter.html">Decoy Filter</a></span>
+        </p>
+    </div>
+    You can click on <img src="../../images/show_column.png" alt="Show/Hide Icon"/> to show or hide columns, and the
+    table below gives a short description for every column in the peptide table:
+    <table class="piTable" width="100%" cellpadding="4" cellspacing="4">
+        <tr class="piRowHead">
+            <td width="20%">Column</td>
+            <td>Description</td>
+        </tr>
+        <tr class="piRowEven">
+            <td width="20%">Row Number</td>
+            <td>Displays the row number</td>
+        </tr>
+        <tr class="piRowOdd">
+            <td width="20%">Peptide Sequence</td>
+            <td>The complete peptide sequence is shown with modified amino acids highlighted in red. If you
+                mouse
+                over the peptide sequence, a tooltip with PTM details will be displayed.
+            </td>
+        </tr>
+        <tr class="piRowEven">
+            <td width="20%">Fit</td>
+            <td>whether the peptide sequence fits the protein sequence, it could be unknown when the protein
+                sequence is
+                no available, or fit if the peptide sequence can be found at the given start and stop position
+                of the
+                protein sequence, or fuzzy fit if the peptide position no longer fit, but the peptide sequence
+                can still
+                be found in the protein sequence.
+            </td>
+        </tr>
+        <tr class="piRowOdd">
+            <td width="20%">Submitted Protein Accession</td>
+            <td>The peptide's protein accession from the original data file/PRIDE experiment.</td>
+        </tr>
+        <tr class="piRowEven">
+            <td width="20%">Mapped Protein Accession</td>
+            <td>As the submitted protein accessions can sometimes
+                be in none-standard format PRIDE Inspector will try to convert it to a more
+                common format.
+            </td>
+        </tr>
+        <tr class="piRowOdd">
+            <td width="20%">Charge</td>
+            <td>Precursor ion charge</td>
+        </tr>
+        <tr class="piRowEven">
+            <td width="20%">Delta m/z</td>
+            <td>
+                The difference between the observed and theoretical m/z.
+            </td>
+        </tr>
+        <tr class="piRowOdd">
+            <td width="20%">Precursor m/z</td>
+            <td>Precursor ion m/z value.</td>
+        </tr>
+        <tr class="piRowEven">
+            <td width="20%">#PTMs</td>
+            <td>Number of post translational modifications on this peptide.</td>
+        </tr>
+        <tr class="piRowOdd">
+            <td width="20%">PTM List</td>
+            <td>A distinct list of PTM accessions with their count</td>
+        </tr>
+        <tr class="piRowEven">
+            <td width="20%">#Ions</td>
+            <td>Number of fragment ions assigned to this peptide identification.</td>
+        </tr>
+        <tr class="piRowOdd">
+            <td width="20%">Peptide Score</td>
+            <td>
+                Peptide score given by the search engine, the number of columns depends on the search engine
+                used.
+                For instance, mascot score will be displayed if Mascot search engine is used. Both X correlation
+                and
+                Delta Cn will be displayed for SEQUEST search engine.
+            </td>
+        </tr>
+        <tr class="piRowEven">
+            <td width="20%">Length</td>
+            <td>Peptide length</td>
+        </tr>
+        <tr class="piRowOdd">
+            <td width="20%">Start</td>
+            <td>The start position of the peptide within protein sequence.</td>
+        </tr>
+        <tr class="piRowEven">
+            <td width="20%">Stop</td>
+            <td>The stop position of the peptide within protein sequence.</td>
+        </tr>
+        <tr class="piRowOdd">
+            <td width="20%">pI</td>
+            <td>Theoretical isoelectric point calculated using peptide sequence. See details from <a href="../isoelectric_point.html">here</a>.</td>
+        </tr>
+        <tr class="piRowEven">
+            <td width="20%">Spectrum</td>
+            <td>Spectrum ID</td>
+        </tr>
+        <tr class="piRowOdd">
+            <td width="20%">Identification ID</td>
+            <td>Unique protein identification ID</td>
+        </tr>
+        <tr class="piRowEven">
+            <td width="20%">Peptide ID</td>
+            <td>Peptide ID for a given protein identification</td>
+        </tr>
+        <tr class="piRowOdd">
+            <td width="20%">More</td>
+            <td>Show additional params for the peptide</td>
+        </tr>
+    </table>
+</div>
+
+<div class="piProcedureSteps">
+    <a name="ptm"></a>
+
+    <h3>PTM</h3>
+
+    <p>
+        You can click on <img src="../../images/show_column.png" alt="Show/Hide Icon"/> to show or hide columns, and the
+        table below gives a short description for every column in the PTM table:
+    <table class="piTable" width="100%" cellpadding="4" cellspacing="4">
+        <tr class="piRowHead">
+            <td width="20%">Column</td>
+            <td>Description</td>
+        </tr>
+        <tr class="piRowEven">
+            <td width="20%">Row Number</td>
+            <td>Displays the row number</td>
+        </tr>
+        <tr class="piRowOdd">
+            <td width="20%">Accession</td>
+            <td>The original accession from the PTM database.</td>
+        </tr>
+        <tr class="piRowEven">
+            <td width="20%">Name</td>
+            <td>PTM name</td>
+        </tr>
+        <tr class="piRowOdd">
+            <td width="20%">Location</td>
+            <td>The location within the peptide where the PTM occurred</td>
+        </tr>
+        <tr class="piRowEven">
+            <td width="20%">Modified Residue</td>
+            <td>The modified amino acid.</td>
+        </tr>
+        <tr class="piRowOdd">
+            <td width="20%">Monoisotopic Mass Delta</td>
+            <td>Monoisotopic Mass Delta</td>
+        </tr>
+        <tr class="piRowEven">
+            <td width="20%">Average Mass Delta</td>
+            <td>Average Mass Delta</td>
+        </tr>
+        <tr class="piRowOdd">
+            <td width="20%">PTM Database</td>
+            <td>The PTM database where the modification has been defined.</td>
+        </tr>
+        <tr class="piRowEven">
+            <td width="20%">PTM Database Version</td>
+            <td>The version of the PTM database.</td>
+        </tr>
+    </table>
+    <div class="note">
+        PTM table is hidden when the selected peptide has not post translational modifications.
+    </div>
+    </p>
+</div>
+
+<div class="piProcedureSteps">
+    <a name="spectrum"></a>
+
+    <h3>Spectrum Browser</h3>
+
+    <p>
+        Displays the spectrum identifying the selected peptide.
+        <br>
+        For more details, please refer to: <a href="../mzgraph/spectra.html">Spectrum Browser</a>.
+    </p>
+</div>
+
+<div class="piProcedureSteps">
+    <a name="sequence"></a>
+
+    <h3>Protein Sequence Viewer</h3>
+
+    <p>
+        The Protein Sequence Viewer can be used to visualize downloaded protein sequence, and colour code it
+        with
+        peptide and ptm identifications.
+        <br>
+        For more details, please refer to: <a href="../protein/protein_sequence_viewer.html">Protein Sequence
+        Viewer</a>.
+    </p>
+</div>
+</div>
 </div>
 
 
