Added a disclaimer to help document, optimized the performance of quantification tab.

--- a/pride-inspector/branches/development/src/main/resources/help/html/faq/shared_peptide.html
+++ b/pride-inspector/branches/development/src/main/resources/help/html/faq/shared_peptide.html
@@ -29,14 +29,17 @@
     <!-- table of contents -->
     <div class="introduction">
         <p>
-            The PRIDE XML is created to store both spectrum and protein identification related information, in
-            addition, it allows experiment metadata to captured. It is main format to use if you would like to submit
-            your data to PRIDE.
+            Please be aware that usually only one of the possible peptide to protein mappings are kept in PRIDE. In
+            shotgun proteomics experiments, protein inference needs to be taken into account when interpreting protein
+            identifications reported that are based on non-ambiguous (or shared) peptides.
         </p>
+
         <div class="note">
-            Please refer to our online documentation if you want a detailed description on PRIDE XML:
-            <br>
-            <a href="http://www.ebi.ac.uk/pride/schemaXmlspyDocumentation.do">PRIDE XML</a>
+            Please refer to the reference below if you want a detailed explanation on the problem:
+            <br><br>
+            Nesvizhskii AI, Aebersold R. Interpretation of shotgun proteomic data: the
+            protein inference problem. Mol Cell Proteomics. 2005 Oct;4(10):1419-40. Epub 2005
+            Jul 11. PubMed PMID: 16009968.
         </div>
     </div>
 
