--- a/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/browse/peptide.html
+++ b/pride-inspector/branches/mzidentml/src/main/resources/help/html/usage/browse/peptide.html
@@ -174,9 +174,9 @@
         <tr class="piRowOdd">
             <td width="20%">Peptide Score</td>
             <td>
-                Peptide score given by the search engine, the number of columns depends on the search engine
+                Peptide b1Score given by the search engine, the number of columns depends on the search engine
                 used.
-                For instance, mascot score will be displayed if Mascot search engine is used. Both X correlation
+                For instance, mascot b1Score will be displayed if Mascot search engine is used. Both X correlation
                 and
                 Delta Cn will be displayed for SEQUEST search engine.
             </td>
